# docs/swagger.yaml
@@ -20,9 +20,16 @@ definitions:
       emailText:
         description: Plain text content of the email
         type: string
+      enableOpenTracking:
+        description: EnableOpenTracking indicates if open tracking is enabled for
+          the email
+        type: boolean
       html:
         description: HTML content of the email
         type: string
+      opened:
+        description: Opened indicates if the email has been opened
+        type: boolean
       recipientEmail:
         description: Email address of the recipient
         type: string
@@ -54,6 +61,10 @@ definitions:
       emailText:
         description: Plain text content of the email
         type: string
+      enableOpenTracking:
+        description: EnableOpenTracking indicates if open tracking is enabled for
+          the email
+        type: boolean
       html:
         description: HTML content of the email
         type: string
@@ -75,12 +86,46 @@ definitions:
     required:
     - emailSubject
     - emailText
+    - enableOpenTracking
     - html
     - recipientEmail
     - recipientName
     - senderEmail
     - senderName
     - userName
+    type: object
+  email.SendGridEvent:
+    properties:
+      email:
+        description: Email address of the recipient
+        type: string
+      event:
+        description: Type of event (e.g., "open", "click")
+        type: string
+      ip:
+        description: IP address of the recipient
+        type: string
+      sg_content_type:
+        description: Content type of the email
+        type: string
+      sg_event_id:
+        description: Event ID from SendGrid
+        type: string
+      sg_machine_open:
+        description: Indicates if the email was opened by a machine
+        type: boolean
+      sg_message_id:
+        description: Message ID from SendGrid
+        type: string
+      timestamp:
+        description: Timestamp of the event
+        type: integer
+      transaction_uuid:
+        description: Transaction UUID associated with the email
+        type: string
+      useragent:
+        description: User agent of the recipient's device
+        type: string
     type: object
   textmessage.TextMessage:
     properties:
@@ -195,6 +240,38 @@ paths:
       summary: Health check
       tags:
       - Health
+  /sendgrid/webhooks/event:
+    post:
+      consumes:
+      - application/json
+      description: Processes events from SendGrid webhook, such as email opens
+      parameters:
+      - description: SendGrid events
+        in: body
+        name: events
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/email.SendGridEvent'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Handle SendGrid webhook events
+      tags:
+      - Email
   /text-message:
     get:
       description: Get text messages for a consumer
